--- a/src/index.html
+++ b/src/index.html
@@ -231,6 +231,7 @@
 					</div>
 	 		</div>
 	</div>
-	<script src="js/bundle.js"></script>
+	<script src="../dist/js/bundle.js"></script>
+	<!-- не работает -->
 </body>
 </html>
